@@ -6,6 +6,7 @@
 * Fix - Small Sass files change (wiyhout affect CSS)
 * Fix - Fixed duplicated breadcrumb for custom taxonomy archives
 * Fix - Fixed CSS for radio and checkboxes (forms)
+* Fix - Delaying the the child theme CSS loading
 
 ### 1.8.5
 * Fix - Footer widgets changed breakpoint
